--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.1.3",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.3"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
+    "bcrypt": "^5.1.1",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.2.1",
+    "next-auth": "^4.24.7",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
   }
